# mongodb-knowledge-graph

./: LICENSE  README.md  pyproject.toml
mcp_server_memory/: __init__.py  knowledge_graph.py  main.py  types.py
mcp_server_memory/storage/: __init__.py  base.py  factory.py  file_adapter.py  mongodb_adapter.py
mongodb_knowledge_graph/: __init__.py  knowledge_graph.py  main.py  models.py
mongodb_knowledge_graph/storage/: __init__.py  base.py  factory.py  file_adapter.py  mongodb_adapter.py
tests/: __init__.py  test_file_adapter.py  test_knowledge_graph.py  test_mongodb_adapter.py  test_mongodb_incremental.py
